# aeo-visibility-diff

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
dashboard/: app.py
data/scored/: run_1777820892.csv
reports/: exec_summary.md  linear.md  ramp.md  rippling.md
src/: cli.py  prompts.py  reporter.py  runner.py  scorer.py
src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
tests/: test_prompts.py  test_scorer.py
