[project]
name = "aeo-visibility-diff"
version = "0.1.0"
description = "AEO visibility measurement layer — brand mention, citation quality, and KPC framing across AI search platforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "jinja2>=3.1.4",
    "pandas>=2.2.0",
    "pyarrow>=17.0.0",
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "tqdm>=4.67.0",
    "aiofiles>=24.1.0",
]

[project.scripts]
aeo = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
